Release 1.23.0-1 (#160)
* Release 1.23.0

* VillanyAtesz - Remove

* EliteBase - Remove old commodity and loadout tables, and migration changeSets

* ApphubCI - Stopping VM stops proxies too

* Integration - Remove deprecated verifyInvalidFieldState methods

* Platform - Separate packages for SqlBuilder classes

* Platform - Admin role is not used in tests (unless necessary), Only 1 test is allowed that uses Test role to avoid concurrency issues

* SkyXplore - Tick counting in game

* Calendar - Warn the user when event is about to expire (#161)

* Calendar - Warn the user when event is about to expire

* Calendar - Extend event

* Calendar - Testing testing

* Calendar - Store view as user setting so it does not defaults to "month" view every time

* Calendar - "Today" button

* Calendar - Merge similar one-time events

* Calendar - Search

* Calendar - Auto-fill end date

* Release 1.23.1

Calendar
    Null handling
    Missing localization